--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>工作流</title>
+  <title>王梓杰的请假</title>
   <link rel="icon" href="https://res.uyiban.cn/icon/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
   <meta content="telephone=no" name="format-detection">
